tests/ui-stable/try_transmute_mut-src-not-frombytes.stderr
error[E0277]: the trait bound `Src: FromBytes` is not satisfied
 --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:21:40
  |
 21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `FromBytes` is not implemented for `Src`
   --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:13:1
    |
 13 | struct Src;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(FromBytes)]` to `Src`
    = help: the following other types implement trait `FromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
    |     where
    |         Src: FromBytes + IntoBytes,
    |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
 --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:21:40
  |
 21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `FromBytes` is not implemented for `Dst`
   --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:17:1
    |
 17 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(FromBytes)]` to `Dst`
    = help: the following other types implement trait `FromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
    |         Dst: FromBytes + IntoBytes,
    |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
 --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:21:40
  |
 21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Dst`
   --> tests/ui-stable/try_transmute_mut-src-not-frombytes.rs:17:1
    |
 17 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Dst`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
    |         Dst: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
